@@ -1,0 +1,6 @@
+Custom Roles
+------------
+
+.. role:: custom(literal)
+
+:custom:`one` :custom:`two` :custom:`three`
