@@ -1,7 +1,7 @@
 execfile('functional/tests/_standalone_rst_defaults.py')
 
 # Source and destination file names.
-test_source = "standalone_rst_html4css1.txt"
+test_source = "standalone_rst_pseudoxml.txt"
 test_destination = "standalone_rst_pseudoxml.txt"
 
 # Keyword parameters passed to publish_file.
